--- a/SWE 2/ST-Comm_Spring/pom.xml
+++ b/SWE 2/ST-Comm_Spring/pom.xml
@@ -4,4 +4,19 @@
   <artifactId>ST-Comm</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>ST-Comm</name>
+  <parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.4.2.RELEASE</version>
+	</parent>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency> 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+	</dependencies>
 </project>
