--- a/SWE 2/ST-Comm_Spring/src/main/resources/application.properties
+++ b/SWE 2/ST-Comm_Spring/src/main/resources/application.properties
@@ -1,2 +1,3 @@
+server.port = 8090
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ST-Comm;integratedSecurity=true;
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
