--- a/SWE 2/ST-Comm_Spring/src/main/resources/application.properties
+++ b/SWE 2/ST-Comm_Spring/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 server.port = 8090
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ST-Comm;integratedSecurity=true;
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=stcomm.education@gmail.com
+spring.mail.password=1st_comm
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
