--- a/Phase 3/ST-COMM-Testing-phase3/.classpath
+++ b/Phase 3/ST-COMM-Testing-phase3/.classpath
@@ -32,5 +32,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Mariam Ashraf/Downloads/selenium-server-standalone-2.53.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Mariam Ashraf/Downloads/selenium-server-standalone-3.0.0-beta2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
