--- a/Phase 3/ST-COMM-Testing-phase3/.project
+++ b/Phase 3/ST-COMM-Testing-phase3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ST-COMM-Testing-phase3</name>
+	<name>ST-Comm-Testing-Phase3</name>
 	<comment></comment>
 	<projects>
 	</projects>
